# graph_var

./: .gitignore  README.md  __init__.py  analyze_gfa.py  c4a_test_script.py  debugging_071124.ipynb  evaluating_functions.py  graph.py  kruskal.py  pyproject.toml  reference_tree_variation_methods_rough.docx  requirements.txt  search_tree.py  setup.py  test.gfa  utils.py
Tests/: read_gfa_graph.py  temp.py
data/: c4a.edge  c4a.gfa  c4a.node  c4a.tree  c4a.vcf  c4a_with_inversion.gfa  c4a_with_inversion.vcf
graph_var/: __init__.py  cli.py  evaluating_functions.py  graph.py  search_tree.py  utils.py
notebooks/: bubble_summary.ipynb  ch20small.ipynb  ch6_hla.ipynb  generate_graph_obj.ipynb  generate_vcf.ipynb  statistics.ipynb  triallelic_bubble.ipynb  variant_type_summary.ipynb
output/: c4a.vcf
scripts/: test_simplify.py
