[project]
name = "pantree"
version = "0.1.0"
description = "Reference tree-based variant identification and classification in a pangenome graph"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.9.3",
    "networkx>=3.4.2",
    "numpy>=2.1.3",
    "scipy>=1.14.1",
    "setuptools>=75.6.0",
    "tqdm>=4.67.1",
]

[project.scripts]
pantree = "graph_var.cli:main"
graph_var = "graph_var.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["graph_var"]

[tool.hatch.metadata]
allow-direct-references = true
